# Sales/src/Client/OpenAPIs/swagger.json
@@ -453,13 +453,31 @@
             "x-position": 1
           },
           {
-            "name": "assigneeId",
+            "name": "customerId",
             "in": "query",
             "schema": {
               "type": "string",
               "nullable": true
             },
             "x-position": 2
+          },
+          {
+            "name": "ssn",
+            "in": "query",
+            "schema": {
+              "type": "string",
+              "nullable": true
+            },
+            "x-position": 3
+          },
+          {
+            "name": "assigneeId",
+            "in": "query",
+            "schema": {
+              "type": "string",
+              "nullable": true
+            },
+            "x-position": 4
           },
           {
             "name": "page",
@@ -469,7 +487,7 @@
               "format": "int32",
               "default": 1
             },
-            "x-position": 3
+            "x-position": 5
           },
           {
             "name": "pageSize",
@@ -479,7 +497,7 @@
               "format": "int32",
               "default": 10
             },
-            "x-position": 4
+            "x-position": 6
           },
           {
             "name": "sortBy",
@@ -488,7 +506,7 @@
               "type": "string",
               "nullable": true
             },
-            "x-position": 5
+            "x-position": 7
           },
           {
             "name": "sortDirection",
@@ -505,7 +523,7 @@
                 }
               ]
             },
-            "x-position": 6
+            "x-position": 8
           }
         ],
         "responses": {
